feat: implement im-server MVP foundation